--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>My Resume</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Anant Abhishek</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpeg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,25 +63,19 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Anant
+          <span class="text-primary">Abhishek</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">(+91) 7295011400 ·
+          <a href="mailto:anantabhishek_shailendra@srmuniv.edu.in">anantabhishek_shailendra@srmuniv.edu.in</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">An enthusiastic fresher with highly motivated and leadership skills having bachelors of engineering degree in Electronics and Communication Engineering. Eager to learn new technologies and methodologies. Ability to produce the best result in a pressure situation. Ability to work as an individual as well as in a group.</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="#">
             <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
@@ -95,16 +89,16 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Trainee</h3>
+            <div class="subheading mb-3">Airports Authority of India</div>
+            <p>To watch, observe and learn the functions of the Airports Authority of India(AAI) in the communication of airplanes with the ground control. To get to know about the different procedures and steps taken during landing and takeoffs. Getting to know about the types of equipments which facilitate these communications.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">June 2018 - July 2018</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Web Developer</h3>
             <div class="subheading mb-3">Intelitec Solutions</div>
@@ -135,7 +129,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2008 - June 2010</span>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
@@ -149,24 +143,35 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">SRM Institute of Science and Technology</h3>
+            <div class="subheading mb-3">Bachelor of Technology</div>
+            <div>Electronics and Communication Engineering</div>
+            <p>PERCENT: 82.98%</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">2016 - 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Adarsh Vikas Vidhyalaya</h3>
+            <div class="subheading mb-3">XII(SCIENCE) - CBSE</div>
+            <p>PERCENT: 80%</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2015 - 2016</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">St.Karen's High School</h3>
+            <div class="subheading mb-3">X - ICSE</div>
+            <p>PERCENT: 78.6%</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">2013 - 2014</span>
           </div>
         </div>
 
@@ -180,7 +185,7 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
+        <!-- <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
@@ -217,22 +222,32 @@
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
+        </ul> -->
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            ARM Cortex - M</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            NumPy</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            Arduino</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Raspberry Pi</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            HTML + CSS</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Python3</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Keras</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Verilog</li>
         </ul>
       </div>
     </section>
