--- a/index.html
+++ b/index.html
@@ -47,13 +47,19 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#cons">Conferences and Workshops</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#pos">Positions of Responsibility</a>
         </li>
       </ul>
     </div>
@@ -180,6 +186,25 @@
 
     <hr class="m-0">
 
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+      <div class="w-100">
+        <h2 class="mb-5">Projects</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Obstacle avoiding robot</h3>
+            <p>Obstacle avoiding robot with the use of Machine Learning Algorithms and IOT.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - June 2019</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <hr class="m-0">
+
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
@@ -254,46 +279,89 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <h2 class="mb-5">Awards</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Introduction to AI and IOT | iSMRITI</h3>
+            <p>Got "Excellent" in the "Introduction to AI and IOT" BY iSMRITI - IIT KANPUR</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">May 2019 - May 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Best Physics Project Award</h3>
+            <p>Got Best Physics Project Award - SRM University</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">March 2017 - March 2017</span>
+          </div>
+        </div>
+
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="certifications">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i> -->
+            1. Cloud Computing - NPTEL</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i> -->
+            2. Programming, Data Structures and Algorithms - NPTEL</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i> -->
+            3. Python Data Structures - Coursera</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i> -->
+            4. Embedded System Design with ARM - NPTEL</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i> -->
+            5. Introduction to Internet of Things - NPTEL</li>
+        </ul>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="cons">
+      <div class="w-100">
+        <h2 class="mb-5">Conferences and Workshops</h2>
+        <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i> -->
+            1. Virtual Reality Workshop - IEEE</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i> -->
+            2. Digital and Social Media Marketing - WITTYFEED</li>
+          <li>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i> -->
+            3. Introduction to AI and IOT - IIT Kanpur</li>
+        </ul>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="pos">
+      <div class="w-100">
+        <h2 class="mb-5">Positions of Responsibility</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i> -->
+            1. Committee Head - Aaruush</li>
+          <li>
+            <!-- <i class="fa-li fa fa-trophy text-warning"></i> -->
+            2. Committee Member - Aaruush</li>
         </ul>
       </div>
     </section>
