--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
         </li>
         <li class="nav-item">
